parser/bruen_parser.go
// Code generated from Bruen.g4 by ANTLR 4.9.1. DO NOT EDIT.

package parser // Bruen

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'{'", "'}'", "':'", "'['", "']'", "']['", "'.'", "','", "'new'", "'\"'",
	"", "", "", "", "", "'||'", "'&&'", "'>'", "'<'", "'=='", "'!='", "'*'",
	"'/'", "'+'", "'-'", "';'", "'='", "'('", "')'", "'if'", "'else'", "'while'",
	"'for'", "'in'", "'class'", "'attributes'", "'methods'", "'init'", "'private'",
	"'public'", "'write'", "'read'", "'function'", "'return'", "'main'", "'var'",
	"'int'", "'float'", "'char'", "'bool'", "'void'", "'program'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "INT", "FLOAT", "CHAR", "BOOL",
	"WS", "OR", "AND", "GT", "LT", "EQ", "NEQ", "MUL", "DIV", "ADD", "SUB",
	"SEMI", "ASSIGN", "LPAREN", "RPAREN", "IF", "ELSE", "WHILE", "FOR", "IN",
	"CLASS", "ATTRIBUTES", "METHODS", "INIT", "PRIVATE", "PUBLIC", "WRITE",
	"READ", "FUNCTION", "RETURN", "MAIN", "VAR", "INT_TYPE", "FLOAT_TYPE",
	"CHAR_TYPE", "BOOL_TYPE", "VOID", "PROGRAM", "ID",
}

var ruleNames = []string{
	"program", "program2", "classDef", "classBlock", "classAttributes", "classMethod",
	"classInit", "variableDeclaration", "varsDec", "varsDecArray", "varsDecMat",
	"attributesDeclaration", "attributesDec", "varsTypeInit", "varsTypeInit2",
	"vars", "varArray", "varMat", "functions", "parameters", "parameter", "functionBlock",
	"returnRule", "block", "statutesNoReturn", "statutes", "assignation", "functionCall",
	"arguments", "arguments2", "methodCall", "initCall", "call", "read", "read2",
	"read3", "write", "w_arguments", "w_arguments2", "conditional", "conditional2",
	"conditional3", "conditional4", "forLoop", "forLoop2", "forLoop3", "whileLoop",
	"whileLoop2", "expression", "exp", "exp2", "t_exp", "t_exp2", "g_exp",
	"g_exp2", "m_exp", "m_exp2", "term", "term2", "factor", "factor2", "varCte",
	"cte_i", "cte_f", "cte_c", "cte_b", "cte_s", "main", "mainBlock", "typeRule",
	"relop",
}

type BruenParser struct {
	*antlr.BaseParser
}

// NewBruenParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *BruenParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewBruenParser(input antlr.TokenStream) *BruenParser {
	this := new(BruenParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Bruen.g4"

	return this
}

// BruenParser tokens.
const (
	BruenParserEOF        = antlr.TokenEOF
	BruenParserT__0       = 1
	BruenParserT__1       = 2
	BruenParserT__2       = 3
	BruenParserT__3       = 4
	BruenParserT__4       = 5
	BruenParserT__5       = 6
	BruenParserT__6       = 7
	BruenParserT__7       = 8
	BruenParserT__8       = 9
	BruenParserT__9       = 10
	BruenParserINT        = 11
	BruenParserFLOAT      = 12
	BruenParserCHAR       = 13
	BruenParserBOOL       = 14
	BruenParserWS         = 15
	BruenParserOR         = 16
	BruenParserAND        = 17
	BruenParserGT         = 18
	BruenParserLT         = 19
	BruenParserEQ         = 20
	BruenParserNEQ        = 21
	BruenParserMUL        = 22
	BruenParserDIV        = 23
	BruenParserADD        = 24
	BruenParserSUB        = 25
	BruenParserSEMI       = 26
	BruenParserASSIGN     = 27
	BruenParserLPAREN     = 28
	BruenParserRPAREN     = 29
	BruenParserIF         = 30
	BruenParserELSE       = 31
	BruenParserWHILE      = 32
	BruenParserFOR        = 33
	BruenParserIN         = 34
	BruenParserCLASS      = 35
	BruenParserATTRIBUTES = 36
	BruenParserMETHODS    = 37
	BruenParserINIT       = 38
	BruenParserPRIVATE    = 39
	BruenParserPUBLIC     = 40
	BruenParserWRITE      = 41
	BruenParserREAD       = 42
	BruenParserFUNCTION   = 43
	BruenParserRETURN     = 44
	BruenParserMAIN       = 45
	BruenParserVAR        = 46
	BruenParserINT_TYPE   = 47
	BruenParserFLOAT_TYPE = 48
	BruenParserCHAR_TYPE  = 49
	BruenParserBOOL_TYPE  = 50
	BruenParserVOID       = 51
	BruenParserPROGRAM    = 52
	BruenParserID         = 53
)

// BruenParser rules.
const (
	BruenParserRULE_program               = 0
	BruenParserRULE_program2              = 1
	BruenParserRULE_classDef              = 2
	BruenParserRULE_classBlock            = 3
	BruenParserRULE_classAttributes       = 4
	BruenParserRULE_classMethod           = 5
	BruenParserRULE_classInit             = 6
	BruenParserRULE_variableDeclaration   = 7
	BruenParserRULE_varsDec               = 8
	BruenParserRULE_varsDecArray          = 9
	BruenParserRULE_varsDecMat            = 10
	BruenParserRULE_attributesDeclaration = 11
	BruenParserRULE_attributesDec         = 12
	BruenParserRULE_varsTypeInit          = 13
	BruenParserRULE_varsTypeInit2         = 14
	BruenParserRULE_vars                  = 15
	BruenParserRULE_varArray              = 16
	BruenParserRULE_varMat                = 17
	BruenParserRULE_functions             = 18
	BruenParserRULE_parameters            = 19
	BruenParserRULE_parameter             = 20
	BruenParserRULE_functionBlock         = 21
	BruenParserRULE_returnRule            = 22
	BruenParserRULE_block                 = 23
	BruenParserRULE_statutesNoReturn      = 24
	BruenParserRULE_statutes              = 25
	BruenParserRULE_assignation           = 26
	BruenParserRULE_functionCall          = 27
	BruenParserRULE_arguments             = 28
	BruenParserRULE_arguments2            = 29
	BruenParserRULE_methodCall            = 30
	BruenParserRULE_initCall              = 31
	BruenParserRULE_call                  = 32
	BruenParserRULE_read                  = 33
	BruenParserRULE_read2                 = 34
	BruenParserRULE_read3                 = 35
	BruenParserRULE_write                 = 36
	BruenParserRULE_w_arguments           = 37
	BruenParserRULE_w_arguments2          = 38
	BruenParserRULE_conditional           = 39
	BruenParserRULE_conditional2          = 40
	BruenParserRULE_conditional3          = 41
	BruenParserRULE_conditional4          = 42
	BruenParserRULE_forLoop               = 43
	BruenParserRULE_forLoop2              = 44
	BruenParserRULE_forLoop3              = 45
	BruenParserRULE_whileLoop             = 46
	BruenParserRULE_whileLoop2            = 47
	BruenParserRULE_expression            = 48
	BruenParserRULE_exp                   = 49
	BruenParserRULE_exp2                  = 50
	BruenParserRULE_t_exp                 = 51
	BruenParserRULE_t_exp2                = 52
	BruenParserRULE_g_exp                 = 53
	BruenParserRULE_g_exp2                = 54
	BruenParserRULE_m_exp                 = 55
	BruenParserRULE_m_exp2                = 56
	BruenParserRULE_term                  = 57
	BruenParserRULE_term2                 = 58
	BruenParserRULE_factor                = 59
	BruenParserRULE_factor2               = 60
	BruenParserRULE_varCte                = 61
	BruenParserRULE_cte_i                 = 62
	BruenParserRULE_cte_f                 = 63
	BruenParserRULE_cte_c                 = 64
	BruenParserRULE_cte_b                 = 65
	BruenParserRULE_cte_s                 = 66
	BruenParserRULE_main                  = 67
	BruenParserRULE_mainBlock             = 68
	BruenParserRULE_typeRule              = 69
	BruenParserRULE_relop                 = 70
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = BruenParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = BruenParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) PROGRAM() antlr.TerminalNode {
	return s.GetToken(BruenParserPROGRAM, 0)
}

func (s *ProgramContext) ID() antlr.TerminalNode {
	return s.GetToken(BruenParserID, 0)
}

func (s *ProgramContext) SEMI() antlr.TerminalNode {
	return s.GetToken(BruenParserSEMI, 0)
}

func (s *ProgramContext) Program2() IProgram2Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IProgram2Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IProgram2Context)
}

func (s *ProgramContext) AllVariableDeclaration() []IVariableDeclarationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IVariableDeclarationContext)(nil)).Elem())
	var tst = make([]IVariableDeclarationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IVariableDeclarationContext)
		}
	}

	return tst
}

func (s *ProgramContext) VariableDeclaration(i int) IVariableDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVariableDeclarationContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IVariableDeclarationContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BruenListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BruenListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *BruenParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, BruenParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(142)
		p.Match(BruenParserPROGRAM)
	}
	{
		p.SetState(143)
		p.Match(BruenParserID)
	}
	{
		p.SetState(144)
		p.Match(BruenParserSEMI)
	}
	p.SetState(148)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == BruenParserVAR {
		{
			p.SetState(145)
			p.VariableDeclaration()
		}

		p.SetState(150)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(151)
		p.Program2()
	}

	return localctx
}

// IProgram2Context is an interface to support dynamic dispatch.
type IProgram2Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgram2Context differentiates from other interfaces.
	IsProgram2Context()
}

type Program2Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgram2Context() *Program2Context {
	var p = new(Program2Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = BruenParserRULE_program2
	return p
}

func (*Program2Context) IsProgram2Context() {}

func NewProgram2Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Program2Context {
	var p = new(Program2Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = BruenParserRULE_program2

	return p
}

func (s *Program2Context) GetParser() antlr.Parser { return s.parser }

func (s *Program2Context) Main() IMainContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMainContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMainContext)
}

func (s *Program2Context) EOF() antlr.TerminalNode {
	return s.GetToken(BruenParserEOF, 0)
}

func (s *Program2Context) AllClassDef() []IClassDefContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IClassDefContext)(nil)).Elem())
	var tst = make([]IClassDefContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IClassDefContext)
		}
	}

	return tst
}

func (s *Program2Context) ClassDef(i int) IClassDefContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClassDefContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IClassDefContext)
}

func (s *Program2Context) AllFunctions() []IFunctionsContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IFunctionsContext)(nil)).Elem())
	var tst = make([]IFunctionsContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IFunctionsContext)
		}
	}

	return tst
}

func (s *Program2Context) Functions(i int) IFunctionsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunctionsContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IFunctionsContext)
}

func (s *Program2Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Program2Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Program2Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BruenListener); ok {
		listenerT.EnterProgram2(s)
	}
}

func (s *Program2Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BruenListener); ok {
		listenerT.ExitProgram2(s)
	}
}

func (p *BruenParser) Program2() (localctx IProgram2Context) {
	localctx = NewProgram2Context(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, BruenParserRULE_program2)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(156)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == BruenParserCLASS {
		{
			p.SetState(153)
			p.ClassDef()
		}

		p.SetState(158)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(162)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == BruenParserFUNCTION {
		{
			p.SetState(159)
			p.Functions()
		}

		p.SetState(164)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(165)
		p.Main()
	}
	{
		p.SetState(166)
		p.Match(BruenParserEOF)
	}

	return localctx
}

// IClassDefContext is an interface to support dynamic dispatch.
type IClassDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsClassDefContext differentiates from other interfaces.
	IsClassDefContext()
}

type ClassDefContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClassDefContext() *ClassDefContext {
	var p = new(ClassDefContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = BruenParserRULE_classDef
	return p
}

func (*ClassDefContext) IsClassDefContext() {}

func NewClassDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClassDefContext {
	var p = new(ClassDefContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = BruenParserRULE_classDef

	return p
}

func (s *ClassDefContext) GetParser() antlr.Parser { return s.parser }

func (s *ClassDefContext) CLASS() antlr.TerminalNode {
	return s.GetToken(BruenParserCLASS, 0)
}

func (s *ClassDefContext) ID() antlr.TerminalNode {
	return s.GetToken(BruenParserID, 0)
}

func (s *ClassDefContext) ClassBlock() IClassBlockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClassBlockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IClassBlockContext)
}

func (s *ClassDefContext) SEMI() antlr.TerminalNode {
	return s.GetToken(BruenParserSEMI, 0)
}

func (s *ClassDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClassDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClassDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BruenListener); ok {
		listenerT.EnterClassDef(s)
	}
}

func (s *ClassDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BruenListener); ok {
		listenerT.ExitClassDef(s)
	}
}

func (p *BruenParser) ClassDef() (localctx IClassDefContext) {
	localctx = NewClassDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, BruenParserRULE_classDef)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(168)
		p.Match(BruenParserCLASS)
	}
	{
		p.SetState(169)
		p.Match(BruenParserID)
	}
	{
		p.SetState(170)
		p.ClassBlock()
	}
	{
		p.SetState(171)
		p.Match(BruenParserSEMI)
	}

	return localctx
}

// IClassBlockContext is an interface to support dynamic dispatch.
type IClassBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsClassBlockContext differentiates from other interfaces.
	IsClassBlockContext()
}

type ClassBlockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClassBlockContext() *ClassBlockContext {
	var p = new(ClassBlockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = BruenParserRULE_classBlock
	return p
}

func (*ClassBlockContext) IsClassBlockContext() {}

func NewClassBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClassBlockContext {
	var p = new(ClassBlockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = BruenParserRULE_classBlock

	return p
}

func (s *ClassBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *ClassBlockContext) ClassAttributes() IClassAttributesContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClassAttributesContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IClassAttributesContext)
}

func (s *ClassBlockContext) ClassInit() IClassInitContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClassInitContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IClassInitContext)
}

func (s *ClassBlockContext) METHODS() antlr.TerminalNode {
	return s.GetToken(BruenParserMETHODS, 0)
}

func (s *ClassBlockContext) AllClassMethod() []IClassMethodContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IClassMethodContext)(nil)).Elem())
	var tst = make([]IClassMethodContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IClassMethodContext)
		}
	}

	return tst
}

func (s *ClassBlockContext) ClassMethod(i int) IClassMethodContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClassMethodContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IClassMethodContext)
}

func (s *ClassBlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClassBlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClassBlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BruenListener); ok {
		listenerT.EnterClassBlock(s)
	}
}

func (s *ClassBlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BruenListener); ok {
		listenerT.ExitClassBlock(s)
	}
}

func (p *BruenParser) ClassBlock() (localctx IClassBlockContext) {
	localctx = NewClassBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, BruenParserRULE_classBlock)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(173)
		p.Match(BruenParserT__0)
	}
	{
		p.SetState(174)
		p.ClassAttributes()
	}
	{
		p.SetState(175)
		p.ClassInit()
	}
	{
		p.SetState(176)
		p.Match(BruenParserMETHODS)
	}
	p.SetState(180)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la-39)&-(0x1f+1)) == 0 && ((1<<uint((_la-39)))&((1<<(BruenParserPRIVATE-39))|(1<<(BruenParserPUBLIC-39))|(1<<(BruenParserFUNCTION-39)))) != 0 {
		{
			p.SetState(177)
			p.ClassMethod()
		}

		p.SetState(182)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(183)
		p.Match(BruenParserT__1)
	}

	return localctx
}

// IClassAttributesContext is an interface to support dynamic dispatch.
type IClassAttributesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsClassAttributesContext differentiates from other interfaces.
	IsClassAttributesContext()
}

type ClassAttributesContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClassAttributesContext() *ClassAttributesContext {
	var p = new(ClassAttributesContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = BruenParserRULE_classAttributes
	return p
}

func (*ClassAttributesContext) IsClassAttributesContext() {}

func NewClassAttributesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClassAttributesContext {
	var p = new(ClassAttributesContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = BruenParserRULE_classAttributes

	return p
}

func (s *ClassAttributesContext) GetParser() antlr.Parser { return s.parser }

func (s *ClassAttributesContext) ATTRIBUTES() antlr.TerminalNode {
	return s.GetToken(BruenParserATTRIBUTES, 0)
}

func (s *ClassAttributesContext) AllAttributesDeclaration() []IAttributesDeclarationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAttributesDeclarationContext)(nil)).Elem())
	var tst = make([]IAttributesDeclarationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAttributesDeclarationContext)
		}
	}

	return tst
}

func (s *ClassAttributesContext) AttributesDeclaration(i int) IAttributesDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAttributesDeclarationContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAttributesDeclarationContext)
}

func (s *ClassAttributesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClassAttributesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClassAttributesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BruenListener); ok {
		listenerT.EnterClassAttributes(s)
	}
}

func (s *ClassAttributesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(BruenListener); ok {
		listenerT.ExitClassAttributes(s)
	}
}

func (p *BruenParser) ClassAttributes() (localctx IClassAttributesContext) {
	localctx = NewClassAttributesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, BruenParserRULE_classAttributes)
	var _la int

	defer func() {
		p.ExitRule()
	}()
